Fix component selector height box (#18)
* Fix component selector height box

Fix the selector buttons' height.
GN-1017

* Fix discussion search box

Fix the issue with the label width overlapping
the input field and the button
Clean up the button styles

GN-1110

--- a/edx-platform/nau-basic/cms/static/sass/partials/cms/theme/_extras.scss
+++ b/edx-platform/nau-basic/cms/static/sass/partials/cms/theme/_extras.scss
@@ -183,4 +183,14 @@ header.mast,
     max-width: unset !important;
 }
 
+/* Fix component height */
+
+.add-xblock-component .new-component .new-component-type {
+	display: inline-flex;
+
+	.add-xblock-component-button {
+		height: 120px !important;
+	}
+}
+
 @import "footer"
